tests/css/media/range/error/mismatched_range/mod.rs
//! Tests auto-converted from "sass-spec/spec/css/media/range/error/mismatched_range"
#[allow(unused)]
use super::rsass;
#[allow(unused)]
use rsass::precision;

// Ignoring "gt_lt", tests with expected error not implemented yet.

// Ignoring "gte_lte", tests with expected error not implemented yet.

// Ignoring "lt_gt", tests with expected error not implemented yet.

// Ignoring "lte_gte", tests with expected error not implemented yet.
